Archive2/2e/3ca1879f245d39/output
main.cpp:21:27: error: use of undeclared identifier 'end1'; did you mean 'endl'?
        cout << YYY[R] << end1; }
                          ^~~~
                          endl
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/ostream:564:5: note: 'endl' declared here
    endl(basic_ostream<_CharT, _Traits>& __os)
    ^
1 error generated.
